# stx-build

./: README.md  centos.Dockerfile  requirements.txt  rpmrepo.Dockerfile  setup.cfg
images/centos/: Dockerfile  base.Dockerfile  buildrc  local.repo
images/centos-aliyun/: Dockerfile
images/centos-aliyun/yum.repos.d/: local.repo
images/centos7/: .rpmmacros  Dockerfile
images/centos7-aliyun/: Dockerfile
images/centos7-aliyun/yum.repos.d/: CentOS-Base.repo  local.repo
images/centos7-repo/: Dockerfile
pipeline/: 001_init_env  build-docker  script-centos
pipeline/centos7/: 00-init  01-build-mirror  02-sync-repo  03-build-compile  04-build-distro
pkgrepo/: app.py  fileserver.py  fileupload.py
stx-build/: setup.cfg
stx-build/stxbuild/common/: build.py  log.py  rpmbuild.py
stxbuild/: cmd.py  main.py  text.py
stxbuild/centos/: __init__.py  rpm.py
stxbuild/common/: __init__.py  args.py  build.py  context.py  git.py  log.py  patch.py  process.py  repo.py  rpmbuild.py  shell.py  utils.py
