[metadata]
name = stxbuild
version = 1.0
summary = Build StarlingX
description-file =
    README.md
author = Zhang Kunpeng
author-email = zhang.kunpeng@99cloud.net
home-page = https://www.starlingx.cloud/
classifier =
    Environment :: StarlingX
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    stxbuild

[entry_points]
console_scripts =
    build = stxbuild.main:main
